feat: 외부 서버 배치 실행 지원 추가
- docker-compose.external.yml 추가 (외부 서버용, 로컬 Redis 없음)
- .env.external.example 추가 (외부 서버용 환경변수 템플릿)
- .env.example 업데이트 (Redis/Embedding 설정 및 API 엔드포인트 정리)
- CLAUDE.md 업데이트 (외부 서버 배포 가이드, 임베딩 배치 상세 문서)

--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,109 @@
+# ============================================================
+# MoheBatch 환경 설정
+# ============================================================
+#
+# 사용 방법:
+#   1. 이 파일을 복사하여 .env 파일 생성
+#   2. 필요한 값들을 수정
+#   3. docker compose 실행
+#
+# 실행 모드:
+#   - 메인 서버: docker compose up --build
+#   - 외부 서버: docker compose -f docker-compose.external.yml up --build
+#
+# ============================================================
+
+# ------------------------------------------------------------
+# 메인 서버 설정 (외부 서버에서 연결할 때 사용)
+# ------------------------------------------------------------
+MAIN_SERVER_IP=100.99.236.50
+
+# ------------------------------------------------------------
 # Database Configuration
+# ------------------------------------------------------------
+# 메인 서버 DB (docker-compose.external.yml 사용 시)
+# DB_HOST=${MAIN_SERVER_IP}
+# DB_PORT=16239
+
+# 로컬 Docker DB (docker-compose.yml 사용 시)
 DB_HOST=mohe-postgres
 DB_PORT=5432
 DB_NAME=mohe_db
 DB_USERNAME=mohe_user
 DB_PASSWORD=your_password_here
 
+# ------------------------------------------------------------
+# Redis Configuration
+# ------------------------------------------------------------
+# 메인 서버 Redis (외부 서버에서 사용)
+# REDIS_HOST=${MAIN_SERVER_IP}
+# REDIS_PORT=6380
+
+# 로컬 Docker Redis (메인 서버에서 사용)
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+# ------------------------------------------------------------
 # Crawler Service
-CRAWLER_BASE_URL=http://mohe-crawler:4000
+# ------------------------------------------------------------
+CRAWLER_BASE_URL=http://crawler:2000
 CRAWLER_TIMEOUT_MINUTES=30
 
+# ------------------------------------------------------------
 # OpenAI API (for description generation)
+# ------------------------------------------------------------
 OPENAI_API_KEY=sk-your-openai-api-key-here
 
-# Batch Worker Settings
+# ------------------------------------------------------------
+# Batch Worker Settings (Crawling)
+# ------------------------------------------------------------
 BATCH_TOTAL_WORKERS=3
 BATCH_THREADS_PER_WORKER=5
 BATCH_CHUNK_SIZE=10
 
-# Image Storage Path (fallback용 - ImageProcessor 사용 시 불필요)
+# Async pool settings
+BATCH_ASYNC_CORE_POOL_SIZE=1
+BATCH_ASYNC_MAX_POOL_SIZE=2
+BATCH_ASYNC_QUEUE_CAPACITY=10
+
+# ------------------------------------------------------------
+# Image Storage
+# ------------------------------------------------------------
 # Docker: /app/images
-# Local: /Users/andrewlim/Desktop/Mohe/images
-IMAGE_STORAGE_PATH=/Users/andrewlim/Desktop/Mohe/images
+# Local: /Users/your-path/images
+IMAGE_STORAGE_PATH=/app/images
 
 # Image Processor Service (Node.js)
-# Docker: http://mohe-image-processor:3000
-# Local: http://localhost:3000
+# 메인 서버: http://100.99.236.50:5200
+# 로컬: http://localhost:3000
 IMAGE_PROCESSOR_URL=http://localhost:3000
 
-# Embedding Service
-EMBEDDING_SERVICE_URL=http://localhost:8000
+# ------------------------------------------------------------
+# Embedding Service (임베딩 배치용)
+# ------------------------------------------------------------
+# 임베딩 서비스 URL (별도 GPU 서버에서 실행)
+# 예: http://gpu-server-ip:6000
+EMBEDDING_SERVICE_URL=http://localhost:6000
+
+# 임베딩 배치 청크 크기 (한 번에 처리할 장소 수)
 BATCH_EMBEDDING_CHUNK_SIZE=5
+
+# ============================================================
+# 배치 API 엔드포인트 참고
+# ============================================================
+#
+# [크롤링 배치]
+# POST /batch/start/{workerId}  - 특정 워커 시작 (0-9)
+# POST /batch/start-all         - 모든 워커 시작
+# POST /batch/stop/{workerId}   - 특정 워커 중지
+# POST /batch/stop-all          - 모든 워커 중지
+# GET  /batch/status            - 전체 상태 조회
+#
+# [임베딩 배치]
+# POST /batch/embedding/start   - 임베딩 배치 시작
+# POST /batch/embedding/stop    - 임베딩 배치 중지
+# GET  /batch/embedding/status  - 상태 조회
+# GET  /batch/embedding/health  - 임베딩 서비스 헬스체크
+#
+# ============================================================
