fix: Spring 네트워크 연결 추가
- mohespring_mohe-network 추가하여 Spring에서 배치 서버 접근 가능하도록 수정
- MoheAdmin에서 배치 서버 상태가 Online으로 표시됨

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,7 @@ services:
       - mohe-network
       - mohereact_mohe-network
       - moheimageprocessor_default
+      - mohespring_mohe-network
     depends_on:
       redis:
         condition: service_healthy
@@ -119,6 +120,8 @@ networks:
   mohereact_mohe-network:
     external: true
   moheimageprocessor_default:
+    external: true
+  mohespring_mohe-network:
     external: true
 
 volumes:
